[gd_scene load_steps=47 format=3 uid="uid://dnu0br3r56y32"]

[ext_resource type="Texture2D" uid="uid://cj5tytj73ljev" path="res://GrafikenUndAssets/Mobs/Slime_Spritesheet.png" id="1_n410h"]
[ext_resource type="Script" path="res://Code/slime.gd" id="1_u2b5x"]
[ext_resource type="AudioStream" uid="uid://smy3gsrlr1uy" path="res://GrafikenUndAssets/Sounds/slime/jump_c_02-102843.mp3" id="3_1asgl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aijy"]
size = Vector2(27, 23)

[sub_resource type="Animation" id="Animation_kdf7u"]
resource_name = "Idle_back"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_ewrle"]
resource_name = "Idle_front"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_mslo6"]
resource_name = "Idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_cd1ks"]
resource_name = "Idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_8f3wo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ubk1f"]
resource_name = "alert_back"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_1x02l"]
resource_name = "alert_front"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_yafnr"]
resource_name = "alert_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_lnfi6"]
resource_name = "alert_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_yyrfs"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="Animation" id="Animation_xxfh7"]
resource_name = "hurt_back"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_6qbwy"]
resource_name = "hurt_front"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_35pcn"]
resource_name = "hurt_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_u2xwn"]
resource_name = "hurt_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WalkSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_1asgl")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vod3l"]
_data = {
"Idle_back": SubResource("Animation_kdf7u"),
"Idle_front": SubResource("Animation_ewrle"),
"Idle_left": SubResource("Animation_mslo6"),
"Idle_right": SubResource("Animation_cd1ks"),
"RESET": SubResource("Animation_8f3wo"),
"alert_back": SubResource("Animation_ubk1f"),
"alert_front": SubResource("Animation_1x02l"),
"alert_left": SubResource("Animation_yafnr"),
"alert_right": SubResource("Animation_lnfi6"),
"death": SubResource("Animation_yyrfs"),
"hurt_back": SubResource("Animation_xxfh7"),
"hurt_front": SubResource("Animation_6qbwy"),
"hurt_left": SubResource("Animation_35pcn"),
"hurt_right": SubResource("Animation_u2xwn")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sid62"]
animation = &"alert_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_coeuu"]
animation = &"alert_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2h5f6"]
animation = &"alert_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mn2ag"]
animation = &"alert_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_b4c80"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sid62")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_coeuu")
blend_point_1/pos = Vector2(0, -0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_2h5f6")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_mn2ag")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_51f0c"]
animation = &"hurt_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wj7ft"]
animation = &"hurt_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_60xfp"]
animation = &"hurt_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5iof"]
animation = &"hurt_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_l17k7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_51f0c")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_wj7ft")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_60xfp")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_w5iof")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cx3fw"]
animation = &"Idle_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b8ubd"]
animation = &"Idle_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt38e"]
animation = &"Idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e7u8u"]
animation = &"Idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_aahis"]
blend_point_0/node = SubResource("AnimationNodeAnimation_cx3fw")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_b8ubd")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pt38e")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_e7u8u")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7qsuo"]
animation = &"death"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y7uhq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i0eb2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nwvvj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nxci"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nlaqw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qh6l4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p6av0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dxy4n"]
states/Alert_all/node = SubResource("AnimationNodeBlendSpace2D_b4c80")
states/Alert_all/position = Vector2(351, 172)
states/Hurt_all/node = SubResource("AnimationNodeBlendSpace2D_l17k7")
states/Hurt_all/position = Vector2(351, 19)
states/Idle_all/node = SubResource("AnimationNodeBlendSpace2D_aahis")
states/Idle_all/position = Vector2(351, 100)
states/death/node = SubResource("AnimationNodeAnimation_7qsuo")
states/death/position = Vector2(591, 100)
transitions = ["Start", "Idle_all", SubResource("AnimationNodeStateMachineTransition_y7uhq"), "Idle_all", "Hurt_all", SubResource("AnimationNodeStateMachineTransition_i0eb2"), "Hurt_all", "Idle_all", SubResource("AnimationNodeStateMachineTransition_nwvvj"), "Idle_all", "Alert_all", SubResource("AnimationNodeStateMachineTransition_7nxci"), "Alert_all", "Idle_all", SubResource("AnimationNodeStateMachineTransition_nlaqw"), "Idle_all", "death", SubResource("AnimationNodeStateMachineTransition_qh6l4"), "death", "End", SubResource("AnimationNodeStateMachineTransition_p6av0")]
graph_offset = Vector2(5, -36)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_yii8t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2mkfv"]
radius = 85.6154

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8x3fn"]
radius = 13.0

[node name="slime" type="CharacterBody2D" groups=["enemy"]]
motion_mode = 1
script = ExtResource("1_u2b5x")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.997797, 0.996552)
texture = ExtResource("1_n410h")
hframes = 4
vframes = 5

[node name="solid_body" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_0aijy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vod3l")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_dxy4n")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_yii8t")
parameters/Alert_all/blend_position = Vector2(0, 0)
parameters/Hurt_all/blend_position = Vector2(0, 0)
parameters/Idle_all/blend_position = Vector2(-0.00160003, 0.0106382)

[node name="AttentionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttentionZone"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_2mkfv")

[node name="AttackZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(1, 4)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_8x3fn")
debug_color = Color(0.984314, 0, 0.337255, 0.419608)

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 150.0
one_shot = true

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
attenuation = 10.0

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_attack_zone_body_exited"]
